# divvy

./: .gitignore
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/divvy/: admin.py  apps.py  models.py  serializers.py  views.py
backend/divvy/migrations/: 0001_initial.py  0002_rename_payedby_expense_paidby.py
