[tool.poetry]
name = "divvy-backend"
version = "0.1.0"
description = ""
authors = ["Jaric Thorning <jaric.thorning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
